--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <nav class="px-6 py-6 flex justify-between items-center border-b border-gray-200">
         <a href="/" class="text-xl font-semibold">Marketplace</a>
         <div class="space-x-6">
-            <a href="{% url 'item:new_item' %}" class="text-lg font-semibold hover:text-gray-500">Nuevo Item</a>
-            <a href="{% url 'item:item_list' %}" class="text-lg font-semibold hover:text-gray-500">Buscar</a>
+            <a href="{% url 'marketplace:item:new_item' %}" class="text-lg font-semibold hover:text-gray-500">Nuevo Item</a>
+            <a href="{% url 'marketplace:item:item_list' %}" class="text-lg font-semibold hover:text-gray-500">Buscar</a>
 
             {% if request.user.is_authenticated %}
-                <a href="{% url 'conversation:inbox' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Chat</a>
-                <a href="{% url 'dashboard:index' %}" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-gray-700">Tablero</a>
+                <a href="{% url 'marketplace:conversation:inbox' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Chat</a>
+                <a href="{% url 'marketplace:dashboard:index' %}" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-gray-700">Tablero</a>
             {% else %}
-                <a href="{% url 'core:signup' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Registrarse</a>
-                <a href="{% url 'core:login' %}" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-gray-700">Iniciar Sesión</a>
+                <a href="{% url 'marketplace:core:signup' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Registrarse</a>
+                <a href="{% url 'marketplace:core:login' %}" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-gray-700">Iniciar Sesión</a>
             {% endif %}
 
         </div>
@@ -38,8 +38,8 @@
             <h3 class="mb-5 font-semibold text-gray-400">Menú</h3>
 
             <ul class="space-y-2">
-                <li><a href="{% url 'core:about' %}" class="text-lg text-teal-500 hover:text-teal-700">About</a></li>
-                <li><a href="{% url 'core:contact' %}" class="text-lg text-teal-500 hover:text-teal-700">Contacto</a></li>
+                <li><a href="{% url 'marketplace:core:about' %}" class="text-lg text-teal-500 hover:text-teal-700">About</a></li>
+                <li><a href="{% url 'marketplace:core:contact' %}" class="text-lg text-teal-500 hover:text-teal-700">Contacto</a></li>
             </ul>
         </div>
     </footer>
